[package]
name = "sample-rust-tide"
version = "0.1.0"
authors = ["Bojan <dbojan@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
tera = "1.6.1"
tide = "0.16.0"
tide-tera = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
doc = false
name = "sample-rust-tide"
path = "src/main.rs"